@@ -4,49 +4,74 @@ package com.softwaremagico.kt.pdf.controller;
  * #%L
  * Kendo Tournament Manager (PDF)
  * %%
- * Copyright (C) 2021 - 2022 Softwaremagico
+ * Copyright (C) 2021 - 2023 Softwaremagico
  * %%
- * This software is designed by Jorge Hortelano Otero. Jorge Hortelano Otero
- * <softwaremagico@gmail.com> Valencia (Spain).
+ * This program is free software: you can redistribute it and/or modify
+ * it under the terms of the GNU Affero General Public License as published by
+ * the Free Software Foundation, either version 3 of the License, or
+ * (at your option) any later version.
  *
- * This program is free software; you can redistribute it and/or modify it under
- * the terms of the GNU General Public License as published by the Free Software
- * Foundation; either version 2 of the License, or (at your option) any later
- * version.
+ * This program is distributed in the hope that it will be useful,
+ * but WITHOUT ANY WARRANTY; without even the implied warranty of
+ * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+ * GNU General Public License for more details.
  *
- * This program is distributed in the hope that it will be useful, but WITHOUT
- * ANY WARRANTY; without even the implied warranty of MERCHANTABILITY or FITNESS
- * FOR A PARTICULAR PURPOSE. See the GNU General Public License for more
- * details.
- *
- * You should have received a copy of the GNU General Public License along with
- * this program; If not, see <http://www.gnu.org/licenses/gpl-3.0.html>.
+ * You should have received a copy of the GNU Affero General Public License
+ * along with this program.  If not, see <http://www.gnu.org/licenses/>.
  * #L%
  */
 
-import com.softwaremagico.kt.core.controller.*;
-import com.softwaremagico.kt.core.controller.models.*;
+import com.softwaremagico.kt.core.controller.GroupController;
+import com.softwaremagico.kt.core.controller.ParticipantImageController;
+import com.softwaremagico.kt.core.controller.RoleController;
+import com.softwaremagico.kt.core.controller.TeamController;
+import com.softwaremagico.kt.core.controller.TournamentExtraPropertyController;
+import com.softwaremagico.kt.core.controller.TournamentImageController;
+import com.softwaremagico.kt.core.controller.models.ClubDTO;
+import com.softwaremagico.kt.core.controller.models.ParticipantDTO;
+import com.softwaremagico.kt.core.controller.models.ParticipantImageDTO;
+import com.softwaremagico.kt.core.controller.models.RoleDTO;
+import com.softwaremagico.kt.core.controller.models.ScoreOfCompetitorDTO;
+import com.softwaremagico.kt.core.controller.models.ScoreOfTeamDTO;
+import com.softwaremagico.kt.core.controller.models.TeamDTO;
+import com.softwaremagico.kt.core.controller.models.TournamentDTO;
+import com.softwaremagico.kt.core.controller.models.TournamentExtraPropertyDTO;
+import com.softwaremagico.kt.core.controller.models.TournamentImageDTO;
 import com.softwaremagico.kt.core.exceptions.NoContentException;
-import com.softwaremagico.kt.core.score.ScoreOfCompetitor;
-import com.softwaremagico.kt.core.score.ScoreOfTeam;
 import com.softwaremagico.kt.pdf.accreditations.TournamentAccreditationCards;
 import com.softwaremagico.kt.pdf.diplomas.DiplomaPDF;
-import com.softwaremagico.kt.pdf.lists.*;
-import com.softwaremagico.kt.persistence.entities.TournamentExtraPropertyKey;
+import com.softwaremagico.kt.pdf.lists.CompetitorsScoreList;
+import com.softwaremagico.kt.pdf.lists.FightSummary;
+import com.softwaremagico.kt.pdf.lists.FightsList;
+import com.softwaremagico.kt.pdf.lists.GroupList;
+import com.softwaremagico.kt.pdf.lists.RoleList;
+import com.softwaremagico.kt.pdf.lists.TeamList;
+import com.softwaremagico.kt.pdf.lists.TeamsScoreList;
 import com.softwaremagico.kt.persistence.values.RoleType;
+import com.softwaremagico.kt.persistence.values.TournamentExtraPropertyKey;
 import com.softwaremagico.kt.persistence.values.TournamentImageType;
 import org.springframework.context.MessageSource;
 import org.springframework.stereotype.Controller;
 
-import java.util.*;
+import java.util.ArrayList;
+import java.util.Arrays;
+import java.util.Collections;
+import java.util.Comparator;
+import java.util.HashMap;
+import java.util.List;
+import java.util.Locale;
+import java.util.Map;
 import java.util.function.Function;
 import java.util.stream.Collectors;
 
 @Controller
 public class PdfController {
+    private static final float DEFAULT_NAME_POSITION = 0.5f;
     private final MessageSource messageSource;
 
     private final RoleController roleController;
+
+    private final TeamController teamController;
 
     private final GroupController groupController;
 
@@ -56,22 +81,23 @@ public class PdfController {
 
     private final TournamentExtraPropertyController tournamentExtraPropertyController;
 
-    public PdfController(MessageSource messageSource, RoleController roleController, GroupController groupController,
+    public PdfController(MessageSource messageSource, RoleController roleController, TeamController teamController, GroupController groupController,
                          TournamentImageController tournamentImageController, ParticipantImageController participantImageController,
                          TournamentExtraPropertyController tournamentExtraPropertyController) {
         this.messageSource = messageSource;
         this.roleController = roleController;
+        this.teamController = teamController;
         this.groupController = groupController;
         this.tournamentImageController = tournamentImageController;
         this.participantImageController = participantImageController;
         this.tournamentExtraPropertyController = tournamentExtraPropertyController;
     }
 
-    public CompetitorsScoreList generateCompetitorsScoreList(Locale locale, TournamentDTO tournament, List<ScoreOfCompetitor> competitorTopTen) {
-        return new CompetitorsScoreList(messageSource, locale, tournament, competitorTopTen);
+    public CompetitorsScoreList generateCompetitorsScoreList(Locale locale, TournamentDTO tournament, List<ScoreOfCompetitorDTO> competitorTopTen) {
+        return new CompetitorsScoreList(messageSource, locale, tournament, competitorTopTen, true);
     }
 
-    public TeamsScoreList generateTeamsScoreList(Locale locale, TournamentDTO tournament, List<ScoreOfTeam> teamsTopTen) {
+    public TeamsScoreList generateTeamsScoreList(Locale locale, TournamentDTO tournament, List<ScoreOfTeamDTO> teamsTopTen) {
         return new TeamsScoreList(messageSource, locale, tournament, teamsTopTen);
     }
 
@@ -83,12 +109,22 @@ public class PdfController {
         return new RoleList(messageSource, locale, tournamentDTO, rolesByClub);
     }
 
+    public TeamList generateTeamList(TournamentDTO tournamentDTO) {
+        final List<TeamDTO> teams = teamController.getAllByTournament(tournamentDTO, null);
+        teams.sort(Comparator.comparing(TeamDTO::getName));
+        return new TeamList(tournamentDTO, teams);
+    }
+
+    public GroupList generateGroupList(Locale locale, TournamentDTO tournamentDTO) {
+        return new GroupList(messageSource, locale, tournamentDTO, groupController.get(tournamentDTO));
+    }
+
     public FightsList generateFightsList(Locale locale, TournamentDTO tournamentDTO) {
         return new FightsList(messageSource, locale, tournamentDTO, groupController.get(tournamentDTO));
     }
 
-    public FightSummaryPDF generateFightsSummaryList(Locale locale, TournamentDTO tournamentDTO) {
-        return new FightSummaryPDF(messageSource, locale, tournamentDTO, groupController.get(tournamentDTO), null);
+    public FightSummary generateFightsSummaryList(Locale locale, TournamentDTO tournamentDTO) {
+        return new FightSummary(messageSource, locale, tournamentDTO, groupController.get(tournamentDTO), null);
     }
 
     public TournamentAccreditationCards generateTournamentAccreditations(Locale locale, TournamentDTO tournamentDTO, Boolean onlyNews,
@@ -101,7 +137,7 @@ public class PdfController {
         final TournamentImageDTO accreditationBackground = tournamentImageController.get(tournamentDTO, TournamentImageType.ACCREDITATION);
         final TournamentImageDTO banner = tournamentImageController.get(tournamentDTO, TournamentImageType.BANNER);
         final TournamentImageDTO defaultPhoto = tournamentImageController.get(tournamentDTO, TournamentImageType.PHOTO);
-        final List<ParticipantDTO> participantDTOS = roleDTOS.stream().map(RoleDTO::getParticipant).collect(Collectors.toList());
+        final List<ParticipantDTO> participantDTOS = roleDTOS.stream().map(RoleDTO::getParticipant).toList();
         final List<ParticipantImageDTO> participantImageDTOS = participantImageController.get(participantDTOS);
         final Map<ParticipantDTO, ParticipantImageDTO> participantImages = participantImageDTOS.stream()
                 .collect(Collectors.toMap(ParticipantImageDTO::getParticipant, Function.identity()));
@@ -162,7 +198,7 @@ public class PdfController {
             throw new NoContentException(this.getClass(), "No roles matching this criteria are found");
         }
         final TournamentImageDTO diploma = tournamentImageController.get(tournamentDTO, TournamentImageType.DIPLOMA);
-        final List<ParticipantDTO> participantDTOS = roleDTOS.stream().map(RoleDTO::getParticipant).collect(Collectors.toList());
+        final List<ParticipantDTO> participantDTOS = roleDTOS.stream().map(RoleDTO::getParticipant).toList();
         try {
             return new DiplomaPDF(participantDTOS, diploma != null ? diploma.getData() : null, getNamePosition(tournamentDTO));
         } finally {
@@ -180,12 +216,12 @@ public class PdfController {
         final TournamentExtraPropertyDTO tournamentExtraPropertyDTO = tournamentExtraPropertyController
                 .getByTournamentAndProperty(tournamentDTO.getId(), TournamentExtraPropertyKey.DIPLOMA_NAME_HEIGHT);
         if (tournamentExtraPropertyDTO == null) {
-            return 0.5f;
+            return DEFAULT_NAME_POSITION;
         }
         try {
-            return Float.parseFloat(tournamentExtraPropertyDTO.getValue());
+            return Float.parseFloat(tournamentExtraPropertyDTO.getPropertyValue());
         } catch (Exception e) {
-            return 0.5f;
+            return DEFAULT_NAME_POSITION;
         }
     }
 }
